ADD: add the rest of endpoints to swagger
